--- a/server/device/index.html
+++ b/server/device/index.html
@@ -2,125 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>gyro.js - easy access to your web browsers built in accelerometer's and gyroscope's</title>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="js/gyro.js"></script>
 </head>
 <body>
-<p>This Example just print's the raw accelerometer and gyro data. Will return null if no device information is
-    found.</p>
+
 
 <p>gyro.getFeatures: <span id="features"></span></p>
 <span id="example"></span>
+
+
 <script>
-    var gyrojs = function () {
-        var measurements = {
-                    x: null,
-                    y: null,
-                    z: null,
-                    alpha: null,
-                    beta: null,
-                    gamma: null
-                },
-                calibration = {
-                    x: 0,
-                    y: 0,
-                    z: 0,
-                    alpha: 0,
-                    beta: 0,
-                    gamma: 0
-                },
-                interval = null,
-                features = [];
-
-        var gyro = {};
-
-        /**
-         * @public
-         */
-        gyro.frequency = 500; //ms
-
-        gyro.calibrate = function () {
-            for (var i in measurements) {
-                calibration[i] = (typeof measurements[i] === 'number') ? measurements[i] : 0;
-            }
-        };
-
-        gyro.getOrientation = function () {
-            return measurements;
-        };
-
-        gyro.startTracking = function (callback) {
-            interval = setInterval(function () {
-                callback(measurements);
-            }, gyro.frequency);
-        };
-
-        gyro.stopTracking = function () {
-            clearInterval(interval);
-        };
-
-        /**
-         * Current available features are:
-         * MozOrientation
-         * devicemotion
-         * deviceorientation
-         */
-        gyro.hasFeature = function (feature) {
-            for (var i in features) {
-                if (feature == features[i]) {
-                    return true;
-                }
-            }
-            return false;
-        };
-
-        gyro.getFeatures = function () {
-            return features;
-        };
-
-
-        /**
-         * @private
-         */
-        // it doesn't make sense to depend on a "window" module
-        // since deviceorientation & devicemotion make just sense in the browser
-        // so old school test used.
-        if (window && window.addEventListener) {
-            function setupListeners() {
-                window.addEventListener('MozOrientation', function (e) {
-                    features.push('MozOrientation');
-                    measurements.x = e.x - calibration.x;
-                    measurements.y = e.y - calibration.y;
-                    measurements.z = e.z - calibration.z;
-                }, true);
-
-                window.addEventListener('devicemotion', function (e) {
-                    features.push('devicemotion');
-                    measurements.x = e.accelerationIncludingGravity.x - calibration.x;
-                    measurements.y = e.accelerationIncludingGravity.y - calibration.y;
-                    measurements.z = e.accelerationIncludingGravity.z - calibration.z;
-                }, true);
-
-                window.addEventListener('deviceorientation', function (e) {
-                    features.push('deviceorientation');
-                    measurements.alpha = e.alpha - calibration.alpha;
-                    measurements.beta = e.beta - calibration.beta;
-                    measurements.gamma = e.gamma - calibration.gamma;
-                }, true);
-            }
-
-            setupListeners();
-        }
-
-        return gyro;
-    }
-    gyrojs().startTracking(function (o) {
-        var b = document.getElementById('example');
-        b.innerHTML = "<p> x = " + o.x + "</p>" +
-                "<p> y = " + o.y + "</p>" +
-                "<p> z = " + o.z + "</p>" +
-                "<p> alpha = " + o.alpha + "</p>" +
-                "<p> beta = " + o.beta + "</p>" +
-                "<p> gamma = " + o.gamma + "</p>";
+    $(function () {
+        var gyro = gyrojs();
+        $('#features').html = gyro.getFeatures();
+        gyro.startTracking(function (o) {
+            var b = $('#example');
+            b.html("<p> x = " + o.x + "</p>" +
+                    "<p> y = " + o.y + "</p>" +
+                    "<p> z = " + o.z + "</p>" +
+                    "<p> alpha = " + o.alpha + "</p>" +
+                    "<p> beta = " + o.beta + "</p>" +
+                    "<p> gamma = " + o.gamma + "</p>");
+        });
     });
 </script>
 </body>
