--- a/threejs-pee.html
+++ b/threejs-pee.html
@@ -388,10 +388,30 @@
 
             }
 
-            var ballShape = new CANNON.Sphere(0.05);
+            // Particles
+            var particles = new THREE.Geometry;
+
+            for (var p = 0; p < 2000; p++) {
+                var particle = new THREE.Vector3(Math.random() * 500 - 250, Math.random() * 500 - 250, Math.random() * 500 - 250);
+                particles.vertices.push(particle);
+            }
+
+            var particleMaterial = new THREE.ParticleBasicMaterial({ color: 0xeeeeee, size: 2 });
+
+            var particleSystem = new THREE.ParticleSystem(particles, particleMaterial);
+ 
+            scene.add(particleSystem);
+
+            var ballShape = new CANNON.Sphere(0.03);
+
+            /*var ballShape = THREE.Geometry;
+            var particleMaterial = new THREE.ParticleBasicMaterial({ color: 0xeeeeee, size: 2 });
+            var particleSystem = new THREE.ParticleSystem(particles, particleMaterial);*/
+
+
             var ballGeometry = new THREE.SphereGeometry(ballShape.radius);
             var shootDirection = new THREE.Vector3();
-            var shootVelo = 10;
+            var shootVelo = 20;
             var projector = new THREE.Projector();
             function getShootDir(targetVec){
                 var vector = targetVec;
