--- a/game/threejs-pee.html
+++ b/game/threejs-pee.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>cannon.js + three.js physics shooter</title>
+<title>PeeGame</title>
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <style>
 html, body {
@@ -58,8 +58,8 @@ body {
 </style>
 </head>
 <body>
-  <script src="http://schteppe.github.io/cannon.js/libs/Three.js"></script>
-  <script src="http://schteppe.github.io/cannon.js/build/cannon.js"></script>
+  <script src="./vendor/Three.js"></script>
+  <script src="./vendor/cannon.js"></script>
   <script src="http://schteppe.github.io/cannon.js/examples/js/PointerLockControls.js"></script>
 
   <div id="blocker">
