--- a/server/device/index.html
+++ b/server/device/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="js/gyro.js"></script>
-    <script src="js/socket.io.min.js"></script>
+    <script src="../js/gyro.js"></script>
+    <script src="../js/socket.io.min.js"></script>
 </head>
 <body>
 
@@ -14,15 +14,49 @@
 
 
 <script>
+
     $(function () {
         var gyro = gyrojs();
-        var socket = io.connect('http://localhost:3000');
-        $('#features').html = gyro.getFeatures();
-        var sendGyroData = function (o) {
-            socket.emit('gyro_data', { gyro: o });
+        var b = $('#example');
+
+        var currentURl = function () {
+            var url = window.location.href;
+            var loc = window.location;
+            if (loc.port != undefined) {
+                var url = loc.protocol + '//' + loc.hostname + ':' + loc.port;
+            } else {
+                var url = loc.protocol + '//' + loc.hostname;
+            }
+            return url;
         };
+        var getRandomColor = function () {
+            var letters = '0123456789ABCDEF'.split('');
+            var color = '#';
+            for (var i = 0; i < 6; i++) {
+                color += letters[Math.round(Math.random() * 15)];
+            }
+            return color;
+        }
+
+
+        var userColor = getRandomColor();
+        var socket = io.connect(currentURl());
+
+
+        //SETUP Player object
+        var player = {
+            "uid": "koray",
+            "color": userColor,
+            "gyro": {}
+        };
+
+
+        var sendGyroData = function (o) {
+            player.gyro = o;
+            socket.emit('player_data', player);
+        };
+
         gyro.startTracking(function (o) {
-            var b = $('#example');
             sendGyroData(o);
             b.html("<p> x = " + o.x + "</p>" +
                     "<p> y = " + o.y + "</p>" +
