--- a/game_alt/index.html
+++ b/game_alt/index.html
@@ -4,6 +4,7 @@
   <title>Pee Game</title>
 </head>
 <body>
+  <script src="bower_components/threejs/build/three.min.js"></script>
   <script src="dist/game.js"></script>
 </body>
 </html>
