--- a/game_alt/index.html
+++ b/game_alt/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
   <script src="bower_components/threejs/build/three.min.js"></script>
+  <script src="vendor/Sparks.js"></script>
+  <script src="vendor/Tween.js"></script>
   <script src="dist/game.js"></script>
 </body>
 </html>
