--- a/server/device/index.html
+++ b/server/device/index.html
@@ -7,52 +7,11 @@
     <link rel="stylesheet" href="../assets/css/app.css"/>
 </head>
 <body>
-<div class="container">
-    <img class="logo" src="../assets/img/logo.svg" alt=""/>
-    <form action="/connect" method="post">
-        <input type="text" id="uid" name="uid" autofocus>
-        <input type="hidden" id="color" name="color" value="" placeholder="Your dick's nick...">
-        <button id="connect" type="submit">UNZIP IT</button>
-    </form>
-</div>
 
+<form action="/connect" method="post">
+    <input type="text" id="uid" name="uid" autofocus>
+    <button id="connect" type="submit">UNZIP</button>
+</form>
 
-<script>
-
-    $(function () {
-        var b = $('#example');
-
-        var currentURl = function () {
-            var url = window.location.href;
-            var loc = window.location;
-            if (loc.port != undefined) {
-                var url = loc.protocol + '//' + loc.hostname + ':' + loc.port;
-            } else {
-                var url = loc.protocol + '//' + loc.hostname;
-            }
-            return url;
-        };
-        var getRandomColor = function () {
-            var letters = '0123456789ABCDEF'.split('');
-            var color = "";
-            for (var i = 0; i < 6; i++) {
-                color += letters[Math.round(Math.random() * 15)];
-            }
-            return color;
-        }
-
-
-        var userColor = getRandomColor();
-
-        $("#color").val(userColor);
-
-        //SETUP Player object
-        var player = {
-            "uid": "koray",
-            "color": userColor,
-            "gyro": {}
-        };
-    });
-</script>
 </body>
 </html>
