--- a/server/device/connected.html
+++ b/server/device/connected.html
@@ -7,7 +7,7 @@
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="../js/gyro.js"></script>
     <script src="../js/socket.io.min.js"></script>
-    <link rel="stylesheet" href="../assets/css/app.css"/>
+    <link rel="stylesheet" href="../assets/css/index.css"/>
 </head>
 <body>
 <h1>
