--- a/server/device/index.html
+++ b/server/device/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="initial-scale=1, user-scalable=no">
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet" href="../assets/css/app.css"/>
+    <link rel="stylesheet" href="../assets/css/index.css"/>
 </head>
 <body>
-
-<form action="/connect" method="post">
-    <input type="text" id="uid" name="uid" autofocus>
-    <button id="connect" type="submit">UNZIP</button>
-</form>
+<div class="container">
+    <div class="wrapper">
+        <img class="logo" src="../assets/img/logo.svg" alt=""/>
+        <form action="/connect" method="post">
+            <input type="text" id="uid" name="uid" autofocus placeholder="your dick's nick">
+            <button id="connect" type="submit">UNZIP IT</button>
+        </form>
+    </div>
+</div>
 
 </body>
 </html>
