connected screen design met druppels

--- a/server/device/connected.html
+++ b/server/device/connected.html
@@ -7,14 +7,16 @@
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="../js/gyro.js"></script>
     <script src="../js/socket.io.min.js"></script>
+    <link rel="stylesheet" href="../assets/css/connected.css"/>
     <link rel="stylesheet" href="../assets/css/app.css"/>
 </head>
 <body>
-<h1>
-    You are connected
-</h1>
-
-<span id="example"></span>
+<div class="outside">
+    <div class="inside">
+        <img src="../assets/img/druppels.svg" onerror="this.onerror=null; this.src='../assets/img/penis.png'" class="druppels"/>
+        <img src="../assets/img/penis.svg" onerror="this.onerror=null; this.src='../assets/img/penis.png'" class="penis"/>
+    </div>
+</div>
 
 <script>
 
