--- a/game_alt/index.html
+++ b/game_alt/index.html
@@ -2,11 +2,23 @@
 <html>
 <head>
   <title>Pee Game</title>
+  <link rel="stylesheet" type="text/css" href="stylesheets/app.css">
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 <body>
-  <script src="bower_components/threejs/build/three.min.js"></script>
-  <script src="vendor/Sparks.js"></script>
-  <script src="vendor/Tween.js"></script>
+  <script src="vendor/Three_r51.js"></script>
+  <script src="vendor/cannon.js"></script>
+  <script src="http://schteppe.github.io/cannon.js/examples/js/PointerLockControls.js"></script>
+
+  <div id="blocker">
+    <div id="instructions">
+      <span style="font-size:40px">Click to play</span>
+      <br />
+      (W,A,S,D = Move, SPACE = Jump, MOUSE = Look, CLICK = Shoot)
+    </div>
+  </div>
+
+  <script src="vendor/controls.js"></script>
   <script src="dist/game.js"></script>
 </body>
 </html>
