--- a/server/device/connected.html
+++ b/server/device/connected.html
@@ -7,16 +7,20 @@
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="../js/gyro.js"></script>
     <script src="../js/socket.io.min.js"></script>
-    <link rel="stylesheet" href="../assets/css/connected.css"/>
+    <script src="../js/app.js"></script>
     <link rel="stylesheet" href="../assets/css/app.css"/>
-    
+    <link rel="stylesheet" href="../assets/css/connected.css"/>
+
 </head>
 <body>
-<div class="outside">
-    <div class="inside">
-        <img src="../assets/img/druppels.svg" onerror="this.onerror=null; this.src='../assets/img/penis.png'" class="druppels"/>
-        <img src="../assets/img/penis.svg" onerror="this.onerror=null; this.src='../assets/img/penis.png'" class="penis"/>
+<div class="container">
+    <div class="wrapper">
+        <h1 class="dick-name">Johnson</h1>
     </div>
+</div>
+<div class="center">
+    <img src="../assets/img/druppels.svg" onerror="this.onerror=null; this.src='../assets/img/penis.png'" class="druppels"/>
+    <img class="penis" src="../assets/img/penis.svg" onerror="this.onerror=null; this.src='../assets/img/penis.png'" class="penis"/>
 </div>
 
 <script>
@@ -51,7 +55,7 @@
 
         var socket = io.connect(currentURl());
 
-//        $('body').
+//      $
 
         //SETUP Player object
         var player = {
