better connected screen

--- a/server/device/connected.html
+++ b/server/device/connected.html
@@ -19,8 +19,10 @@
     </div>
 </div>
 <div class="center">
-    <img src="../assets/img/druppels.svg" onerror="this.onerror=null; this.src='../assets/img/penis.png'" class="druppels"/>
-    <img class="penis" src="../assets/img/penis.svg" onerror="this.onerror=null; this.src='../assets/img/penis.png'" class="penis"/>
+    <img src="../assets/img/druppels.svg" onerror="this.onerror=null; this.src='../assets/img/penis.png'"
+         class="druppels"/>
+    <img class="penis" src="../assets/img/penis.svg" onerror="this.onerror=null; this.src='../assets/img/penis.png'"
+         class="penis"/>
 </div>
 
 <script>
@@ -55,7 +57,8 @@
 
         var socket = io.connect(currentURl());
 
-//      $
+        $('body').css("background-color", "#" + userColor);
+
 
         //SETUP Player object
         var player = {
