--- a/game_alt/index.html
+++ b/game_alt/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <script src="vendor/Three_r51.js"></script>
+  <script src="vendor/OBJLoader.js"></script>
   <script src="vendor/cannon.js"></script>
   <script src="http://schteppe.github.io/cannon.js/examples/js/PointerLockControls.js"></script>
 
