better mothership javascripte  screen

--- a/server/device/connected.html
+++ b/server/device/connected.html
@@ -54,7 +54,6 @@
 
 
         var socket = io.connect(currentURl());
-        console.log(userColor);
         $('body').css('background-color', '#' + userColor);
         $('.dick-name').html(userName);
 
@@ -82,9 +81,9 @@
         };
 
 
+        console.log("Starting Tracking");
         gyro.startTracking(function (o) {
             sendGyroData(o);
-            console.log("Started Tracking");
             b.html("<p> name = " + userName + "</p>" +
                     "<p> x = " + o.x + "</p>" +
                     "<p> y = " + o.y + "</p>" +
