disable save as image

--- a/server/device/connected.html
+++ b/server/device/connected.html
@@ -57,6 +57,8 @@
         $('body').css('background-color', '#' + userColor);
         $('.dick-name').html(userName);
 
+        document.body.style.webkitTouchCallout='none';
+
         $('.penis').on({
            mouseenter: function (){
                 $('.druppels').addClass('topTobottom');
