--- a/game/index.html
+++ b/game/index.html
@@ -4,13 +4,14 @@
   <title>Pee Game</title>
   <link rel="stylesheet" type="text/css" href="stylesheets/app.css">
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="../server/js/socket.io.min.js"></script>
 </head>
 <body>
   <script src="vendor/Three_r51.js"></script>
   <script src="vendor/OBJLoader.js"></script>
   <script src="vendor/cannon.js"></script>
   <script src="http://schteppe.github.io/cannon.js/examples/js/PointerLockControls.js"></script>
-
+  <p class="value"></p>
   <div id="blocker">
     <div id="instructions">
       <span style="font-size:40px">Click to play</span>
