--- a/server/device/connected.html
+++ b/server/device/connected.html
@@ -62,8 +62,8 @@
 
         var socket = io.connect(currentURl());
         $('body').css('background-color', '#' + userColor);
-        $('#logout_form #uid').val(userName);
-        $('.dick-name').html(userName);
+        $('#logout_form #uid').val(decodeURIComponent(userName));
+        $('.dick-name').html(decodeURIComponent(userName));
         //$('.penis').disableSelection();
 
         document.body.style.webkitTouchCallout = 'none';
@@ -71,9 +71,10 @@
         var clearToPiss = false
 
         $('.penis').on({
-            touchstart: function () {
+            touchstart: function (e) {
                 $('.druppels').addClass('topTobottom');
                 $('.penis').addClass('shake');
+                e.preventDefault();
                 gyro.startTracking(function (o) {
                     sendGyroData(o);
                     b.html("<p> name = " + userName + "</p>" +
