--- a/server/device/connected.html
+++ b/server/device/connected.html
@@ -30,6 +30,7 @@
 <div class="center">
     <h1 class="dick-name">Johnson</h1>
     <div class="penis"></div>
+    <!--<div class="nigga-penis"></div>-->
     <div class="druppels toptobottom"></div>
     <!--<img class="druppels" src="../assets/img/druppels.svg" onerror="this.onerror=null; class="druppels"/>-->
 </div>
