--- a/server/device/index.html
+++ b/server/device/index.html
@@ -13,6 +13,7 @@
         <img class="logo" src="../assets/img/logo.svg" alt=""/>
         <form action="/connect" method="post">
             <input type="text" id="uid" name="uid" autofocus placeholder="your dick's nick">
+            <input type="hidden" id="sound" name="sound" >
             <button id="connect" type="submit">UNZIP </button>
         </form>
     </div>
@@ -20,8 +21,13 @@
 <script>
     $(function () {
 
+        function getRandomInt(min, max) {
+            return Math.floor(Math.random() * (max - min + 1)) + min;
+        }
+        $('#sound').val(getRandomInt(1, 3));
+
         $('form').submit(function () {
-            if($('#uid').val().length == 0){
+            if($('#uid').val().length < 2){
                 $('#uid').css('border', '1px solid red');
                 return false;
             } else {
