--- a/game/index.html
+++ b/game/index.html
@@ -7,11 +7,15 @@
   <script src="../server/js/socket.io.min.js"></script>
 </head>
 <body>
+
   <script src="vendor/Three_r51.js"></script>
   <script src="vendor/OBJLoader.js"></script>
   <script src="vendor/cannon.js"></script>
   <script src="http://schteppe.github.io/cannon.js/examples/js/PointerLockControls.js"></script>
-  <p class="value"></p>
+  <!--<p class="value"></p>-->
+  <header>
+      <a href="localhost:3000/game"><img src="img/logo.svg" alt=""/></a>
+  </header>
   <div id="blocker">
     <div id="instructions">
       <span style="font-size:40px">Click to play</span>
