--- a/server/device/trophy.html
+++ b/server/device/trophy.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="initial-scale=1, user-scalable=no">
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet" href="../assets/css/app.css"/>
-    <link rel="stylesheet" href="../assets/css/index.css"/>
+    <link rel="stylesheet" href="../assets/css/trophy.css"/>
 </head>
 <body>
 <div class="container">
     <div class="wrapper">
         <h1>YOU HAVE WON <br/>
             score: 9000</h1>
+        <div class="trophy">
+            <img class="trophy" src="../assets/img/peetrophy-gold.svg" alt=""/>
+        </div>
+        <button id="play_again">PLAY AGAIN</button>
+        <button id="highscore">WATCH HIGHSCORE</button>
     </div>
 </div>
 </body>
