--- a/game/index.html
+++ b/game/index.html
@@ -11,6 +11,7 @@
   <script src="vendor/Three_r51.js"></script>
   <script src="vendor/OBJLoader.js"></script>
   <script src="vendor/cannon.js"></script>
+  <script src="vendor/lodash.js"></script>
   <script src="http://schteppe.github.io/cannon.js/examples/js/PointerLockControls.js"></script>
   <!--<p class="value"></p>-->
   <header>
