tryng to fix button position

--- a/server/device/connected.html
+++ b/server/device/connected.html
@@ -23,16 +23,16 @@
     <input type="hidden" value="" id="uid" name="uid"/>
     <input class="logout" type="submit" value="×"/>
 </form>
-<audio preload="auto" id='plas1'>
+<audio preload="auto" id='plas1' class="hidden">
     <source src="../assets/audio/plas1.mp3"></source>
 </audio>
-<audio preload="auto" id="plas2">
+<audio preload="auto" id="plas2" class="hidden">
     <source src="../assets/audio/plas2.mp3"></source>
 </audio>
-<audio preload="auto" id="plas3">
+<audio preload="auto" id="plas3" class="hidden">
     <source src="../assets/audio/plas3.mp3"></source>
 </audio>
-<audio preload="auto" id="zipper">
+<audio preload="auto" id="zipper" class="hidden">
     <source src="../assets/img/zipper.mp3"></source>
 </audio>
 <div class="center">
